--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.1",
+    "@react-three/drei": "^9.56.4",
+    "@react-three/fiber": "^8.13.2",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.6.7",
     "chart.js": "^4.5.0",
@@ -23,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.22.1",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "three": "^0.152.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
